# factory

./: AGENTS.md  README.md  _fence_probe.md  _issue_probe2.txt  _issue_word_probe.txt  justfile  migration-provenance.md  prompt.txt  pyproject.toml
.codex/: hooks.json
.github/ISSUE_TEMPLATE/: _noop  closed-loop-implementation.md  contracts.md  contracts.yml  cue-implementation-slice.md  cue_implementation_slice.yml  factory-control-loop.md
.github/cue.mod/: module.cue
.github/workflows/: debug-cue-v016-diff.yml  debug-cue-v016-format.yml  debug-cuestrap-ledger.yml  publish-20260721T152304Z-evidence.yml  validate-upstream-monitor.yml
checks/: agent-context-hook
contracts/: AGENTS.md
contracts/agent-context-resolver/: checks_test.cue  domain.cue  fixtures.cue  hook_event.cue  hook_exports.cue  hook_fixtures.cue  hook_runner.cue  hooks.cue  implementation_slice_eval_projection.cue  implementation_slice_materializer.cue  issue_28.cue  issue_template.cue  manifest.cue  proof.cue  resolver.cue  root.cue  routes.cue
contracts/agent-runtime/: assertions.cue  boundary.cue  budgets.cue  context_window.cue  (+15 more)
cue-bootstrap/: .gitignore  README.md
cue-bootstrap/workbook/: cue_workbook.py  pyproject.toml
cue-bootstrap/workbook/qualification/: __init__.py  assertions.py  bootstrap_native.py  evaluate.py  fixtures.py  gopy_worker.py  mcp_lsp.py  models.py  native.py  orchestrator.py  protocol.py  selftest.py  worker.py  worker_target.py
cue.mod/: module.cue
docs/: codex-manifest-slice-workflow.md  issue-28-run-analysis.md
parity/: factory-parity-certificate.md  factory_parity_certificate.cue
scripts/: validate-context-resolver-hook.sh
tmp/: cue-module-probe.txt  emergency-slice.v0.2.md  implementation-plan.md  meta-dual-axis-issue.md  requirements-source.json  slice-ordering.md
(+748 files in other folders)
