[project]
name = "factory"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "hypothesis>=6,<7",
    "marimo>=0.19,<1",
    "pydantic>=2,<3",
]

[tool.uv]
package = false

[tool.factory.project]
schema = "factory.uv-project.v1"
boundary = "repository-root"
canonicalization = "Exact UTF-8 file bytes with LF line endings and one terminal LF."
