[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "cue-bootstrap-workbook"
version = "0.2.0"
description = "Marimo-centered CUE v0.18 native binding and qualification harness"
requires-python = ">=3.12,<3.13"
dependencies = [
  "marimo>=0.14,<1",
  "psutil>=6,<8",
  "pybindgen>=0.22,<0.23",
  "pydantic>=2.11,<3",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "ruff>=0.12,<1",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["qualification*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
